terrform/local-k8s/app-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anti-fraudx
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: anti-fraudx
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: anti-fraudx
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anti-fraudx
  namespace: anti-fraudx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: anti-fraudx
  template:
    metadata:
      labels:
        app: anti-fraudx
    spec:
      containers:
        - name: anti-fraudx
          image: andy19982001/anti-fraudx:terraform
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: alerts
              mountPath: /app/backend/data/scraped_alerts.json
              subPath: scraped_alerts.json
            - name: gcp-vertex-credentials
              mountPath: /var/secrets/google
              readOnly: true
      volumes:
        - name: alerts
          configMap:
            name: scraped-alerts
        - name: gcp-vertex-credentials
          secret:
            secretName: gcp-vertex-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: anti-fraudx
  namespace: anti-fraudx
spec:
  selector:
    app: anti-fraudx
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anti-fraudx
  namespace: anti-fraudx
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: anti-fraudx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anti-fraudx
                port:
                  number: 80
